<resources>
    <string name="app_name">Yousef Al Zamil Robot</string>
    <string name="time">9:41</string>
    <string name="hone">hone</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_account">Sign in to your continue account</string>
    <string name="email_img">email img</string>
    <string name="email_text">Enter your email</string>
    <string name="pwd_text">Enter your password</string>
    <string name="agree_check">I agree to the User Agreement and Privacy Policy</string>
    <string name="sign_button_tx">Sign In</string>
    <string name="robot_control">Robot control</string>
    <string name="robot_side">Robot side</string>
    <string name="robot_example">Lete-Robot01</string>
    <string name="robot_location">Location of area shopping malls</string>
    <string name="ctl_button_tx">Control</string>
    <string name="ctl_remaining_time">Control remaining time</string>
    <string name="ctl_remaining_timing">00:21:51</string>
    <string name="Recharge">Recharge</string>
</resources>