<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="47dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_robot"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:src="@mipmap/robot"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/iv_Online"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:src="@mipmap/online"
        android:layout_marginStart="33dp"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_robot_id"
        android:layout_width="124dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:text="@string/robot_example"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/iv_robot"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_robot_location"
        android:layout_width="220dp"
        android:layout_height="15dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="6dp"
        android:textSize="12sp"
        android:text="@string/robot_location"
        android:textColor="@color/robot_menu_stroke"
        app:layout_constraintStart_toEndOf="@+id/iv_robot"
        app:layout_constraintTop_toBottomOf="@id/tv_robot_id" />

    <Button
        android:id="@+id/bt_ctl"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="9dp"
        android:layout_marginStart="280dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/sign_button"
        android:text="@string/ctl_button_tx"
        android:textAllCaps="false"
        android:gravity="center"
        android:textSize="12sp" />
</androidx.constraintlayout.widget.ConstraintLayout>