<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/wv_live"
        android:layout_width="match_parent"
        android:layout_height="533dp"
        android:orientation="horizontal"
        android:padding="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_remain_title"
        android:layout_width="124dp"
        android:layout_height="17dp"
        android:layout_marginHorizontal="125dp"
        android:layout_marginTop="11dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/ctl_remaining_time"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/wv_live"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_remain_time"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:layout_marginHorizontal="132dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/robot_side"
        android:gravity="center"
        android:text="@string/ctl_remaining_timing"
        android:textSize="16sp"
        style="@style/remain_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_remain_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/bt_recharge"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="46dp"
        app:layout_constraintStart_toEndOf="@+id/tv_remain_time"
        app:layout_constraintTop_toBottomOf="@id/tv_remain_title"
        style="@style/recharge_button"
        android:text="@string/Recharge"
        android:textAllCaps="false"
        android:gravity="center"
        android:textSize="12sp" />

    <ImageButton
        android:id="@+id/bt_voice_output"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="149dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wv_live"
        android:background="@drawable/voice_output" />

    <ImageButton
        android:id="@+id/bt_voice_input"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="149dp"
        android:layout_marginStart="310dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wv_live"
        android:background="@drawable/voice_input" />

    <!--摇杆-->
    <include
        android:id="@+id/include_direction_control"
        layout="@layout/layout_main_direction_control"
        android:layout_width="124dp"
        android:layout_height="124dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_remain_time"
        app:layout_constraintStart_toEndOf="@+id/bt_voice_output"
        app:layout_constraintEnd_toStartOf="@+id/bt_voice_input"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="34dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>